# Abstractions

./: CMakeLists.txt  README.md  main.cpp
2016 practice problems/: main.cpp
2016 practice problems/problem1/: Euclide.cpp  Euclide.h  MinMaxMid.cpp  MinMaxMid.h  PowerOfTwo.cpp  PowerOfTwo.h  minMaxMid.cpp  minMaxMid.h
2016 practice problems/problem2/: StringManipulation.cpp
2016-practice-problems/02/: StringManipulation.cpp  StringManipulation.h
2016-practice-problems/03/: Collections.h
additional/linear-algebra/: MatrixOnMatrix.cpp  MatrixOnMatrix.h  MatrixOnVector.cpp
slides/: main.cpp
slides/01/: DigitalRoot.cpp  DigitalRoot.h
slides/02/: SelfReadingFile.cpp
slides/03/: TheShuntingYardAlgorithm.cpp  TheShuntingYardAlgorithm.h
src/2016-practice-problems/: main.cpp
src/2016-practice-problems/01/: Euclide.cpp  Euclide.h  PowerOfTwo.cpp  PowerOfTwo.h
src/2016-practice-problems/03/: Collections.cpp
src/2016-practice-problems/04/: Collections.cpp  Collections.h  inputtext  outtext
src/2016-practice-problems/05/: Minesweaper.cpp  Minesweaper.h
src/2016-practice-problems/06/: CollectionsSetMap.cpp  CollectionsSetMap.h
src/2016-practice-problems/07/: fuse.cpp  fuse.h
src/2016-practice-problems/08/: Recursion.cpp  Recursion.h
src/2016-practice-problems/09/: TickTackToe.cpp  TickTackToe.h
src/2016-practice-problems/10/: Clique.cpp  Clique.h
src/2016-practice-problems/11/: Hamilton.cpp  Hamilton.h
src/2016-practice-problems/12/: TSP.cpp  bagpackProblem.cpp
src/2016-practice-problems/13/: TruthAndSort.cpp  TruthAndSort.h
src/2016-practice-problems/17/: Matrix.cpp  Matrix.h
src/2016-practice-problems/18/: MyVector.cpp  MyVector.h  ResizableArray.cpp  ResizableArray.h
src/2016-practice-problems/20/: LLString.cpp  LLString.h
src/additional/: main.cpp
src/additional/domino/: Domino.cpp  Domino.h
src/additional/linear-algebra/: MatrixOnMatrix.cpp  MatrixOnMatrix.h  MatrixOnVector.h
src/additional/recursion/: Arithmetics.cpp  Arithmetics.h
src/assignments/01/1-ConsecutiveHeads/: ConsecutiveHeads.h
src/assignments/01/2-Combinations/: Combinations.cpp
src/assignments/01/3-NumericConversion/: NumericConversion.h
src/assignments/01/4-Flesch-Kincaid/: FleschKincaid.h
src/assignments/02/random-writer/: RandomWriter.cpp
src/assignments/02/word-ladder/: WordLadder.cpp
src/assignments/03/0A-Karel-Goes-Home/: KarelGoesHome.cpp
src/assignments/03/2-Sierpinski/: Sierpinski.cpp
src/assignments/03/4-Universal-Health-Care/: UniversalHealthCoverage.cpp
src/assignments/04/: Boggle.cpp
src/assignments/1/1-ConsecutiveHeads/: ConsecutiveHeads.cpp
src/assignments/1/2-Combinations/: Combinations.h
src/assignments/1/3-NumericConversion/: NumericConversion.cpp
src/assignments/1/4-Flesch-Kincaid/: FleschKincaid.cpp
src/assignments/2/random-writer/: RandomWriter.cpp  RandomWriter.h
src/assignments/2/word-ladder/: WordLadder.cpp  WordLadder.h
src/assignments/3/0B-Random-Subsets/: RandomSubsets.cpp
src/assignments/3/1-Subsequences/: Subsequences.cpp
src/assignments/3/3-Inverse-Genetics/: InverseGenetics.cpp
src/assignments/4/: Boggle.cpp
src/assignments/5/: pqueue-test.cpp
src/assignments/5/extension/: pqueueLinkedHeap.cpp  pqueueLinkedHeap.h  test.cpp
src/assignments/5/heap/: pqueue-heap.cpp
src/assignments/5/sorted-linkedlist/: pqueue-linkedlist.cpp  pqueue-linkedlist.h  test.cpp
src/assignments/5/unsorted-double-linkedlist/: test.cpp
src/assignments/5/unsorted-vector/: pqueue-vector.h
src/assignments/6/huffman-encoding/: HuffmanEncoding.cpp  HuffmanEncodingTest.cpp
src/assignments/7/documentation/: assighnment 7.docx
src/assignments/7/trailblazer/: Trailblazer.cpp  Trailblazer.h  TrailblazerTypes.h
src/exams/mid-exams/1/: main.cpp
src/exams/mid/1/2018/: Solutions.cpp  (+1 more)
src/slides/: main.cpp  myProgram
src/slides/01/: Recursion.cpp
src/slides/01-functions/: Recursion.h
src/slides/02-string-streams/: SelfReadingFile.cpp  SelfReadingFile.h  StringManipulation.cpp  StringManipulation.h
src/slides/03/: TheShuntingYardAlgorithm.cpp
src/slides/03-06-collections/03-collections-I/: TheShuntingYardAlgorithm.h
src/slides/03-06-collections/04-collections-II/: BuyingCellTowers.cpp  ReptoreDefence.h
src/slides/03-06-collections/05-collections-III/: AnagramClusters.cpp  AnagramClusters.h
src/slides/03-06-collections/06-collections-IV/: BruteForce.cpp  BruteForce.h
src/slides/03-6-collections/03-collections-I/: TheShuntingYardAlgorithm.cpp
src/slides/03-6-collections/04-collections-II/: BuyingCellTowers.h  ReptoreDefence.cpp
src/slides/07-10-thinking-recursively/07-thinking-recursively-I/: ThinkingRecursively.cpp  ThinkingRecursively.h
src/slides/07-10-thinking-recursively/08-thinking-recursively-II/: Subsets.cpp  Subsets.h
src/tmp/: OurLexicon.cpp  OurLexicon.h
(+155 files in other folders)
